<resources>
    <string name="app_name">AndroidSYSC4907</string>
    <string name="organization_title">Organization</string>
    <string name="customer_title">Customer</string>
    <string name="write_nfc">Write to NFC</string>
    <string name="edit_nfc">Edit a NFC</string>
    <string name="food_restriction_name_string">Peanuts</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="food_restriction_question">What are your restrictions?</string>
    <string name="login_button_text">Login</string>
    <string name="product_name_text">Product Name</string>
    <string name="product_information_text">Product Information</string>
    <string name="next">Next</string>
    <string name="read_nfc">Read NFC</string>
    <string name="my_grocery_list">My Grocery List</string>
    <string name="my_profile">My Profile</string>
    <string name="read_inst_1">1. Ensure NFC Services are turned on in settings</string>
    <string name="read_inst_2">2. Place the phone near the NFC tag </string>
    <string name="product_name">Product Name: </string>
    <string name="ingredients">Ingredients: </string>
    <string name="nfc_enabled">NFC is enabled on this device</string>
    <string name="nfc_disabled">NFC is disabled on this device</string>
    <string name="warning_string">This product contains an item you have restrictions on</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
</resources>
