<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:columnCount="2"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/customer_read_nfc_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="121dp"
        android:text="@string/read_nfc" />

    <Button
        android:id="@+id/customer_list_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/customer_read_nfc_button"
        android:layout_centerInParent="true"
        android:text="@string/my_grocery_list"
        />

    <Button
        android:id="@+id/customer_profile_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/customer_list_button"
        android:layout_centerInParent="true"
        android:text="@string/my_profile"
        />

</RelativeLayout>